Fix search field to not overlap tabs

--- a/sites/all/themes/orwell/css/orwell.main.css
+++ b/sites/all/themes/orwell/css/orwell.main.css
@@ -1773,7 +1773,6 @@ fieldset {
   text-transform: uppercase;
   cursor: pointer;
   opacity: .5;
-  line-height: 3rem;
   font-size: 1.3rem;
 }
 
@@ -1782,14 +1781,11 @@ fieldset {
 }
 
 @media all and (min-width: 49em) {
-  .search-form #edit-search-type {
-    position: absolute;
-    right: 0;
-    top: 0;
+  .search-form #edit-search-type .form-item {
+    margin: 0 .4rem;
   }
   .search-form #edit-search-type .form-item label {
     color: white;
-    line-height: 4rem;
     font-size: 1rem;
   }
 }
@@ -1902,6 +1898,9 @@ fieldset {
   top: 0;
   width: 100%;
   height: 5rem;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
 }
 
 .page-search .search-form__content {
@@ -1928,11 +1927,25 @@ fieldset {
 }
 
 @media all and (min-width: 49em) {
+  .open .search-form__content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+@media all and (min-width: 49em) {
   .page-search .search-form__content {
     height: auto;
     padding: 1.2rem;
     background-color: #b81b40;
   }
+}
+
+.search-form .form-item-search-block-form {
+  -webkit-box-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
 }
 
 .search-form .form-item-search-block-form::before {
